# pushgp

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
pushgp/: .rustfmt.toml  Cargo.toml
pushgp-macros/: Cargo.toml
pushgp-macros/src/: instruction.rs  instruction_list.rs  item_fn.rs  lib.rs  requirement_list.rs  signature.rs  stack_instruction.rs
pushgp-weights/: Cargo.toml
pushgp-weights/src/: instruction_name.rs  lib.rs  set_instruction_weight.rs  target.rs  vm.rs  weight.rs  weight_finding_island.rs
pushgp/src/: code.rs  configuration.rs  context.rs  data.rs  default_code_gen.rs  execute_bool.rs  execute_code.rs  execute_exec.rs  execute_float.rs  execute_integer.rs  execute_name.rs  execution_error.rs  exit_status.rs  genetic_operation.rs  individual.rs  instruction.rs  instruction_data.rs  instruction_table.rs  instruction_type.rs  instruction_weights.rs  island.rs  island_callbacks.rs  lib.rs  list.rs  literal.rs  migration_algorithm.rs  name_stack.rs  parse.rs  parse_error.rs  random_code_generator.rs  random_type.rs  run_result.rs  selection_curve.rs  stack.rs  static_name.rs  threading_model.rs  util.rs  virtual_machine.rs  virtual_machine_engine.rs  virtual_table.rs  (+1 more)
solitaire-shark/: Cargo.toml  README.md
solitaire-shark/src/: card.rs  game_state.rs  island_common.rs  island_five.rs  island_four.rs  island_one.rs  island_three.rs  island_two.rs  main.rs  pile.rs  run_result.rs  solitaire_result.rs  suit.rs  vm.rs
