[package]
name = "pushgp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
byte-slice-cast = "1.0"
fnv = "1.0"
get-size = "0.1"
log = "0.4"
nom = "7.1"
pushgp-macros = { path = "../pushgp-macros" }
rust_decimal = "1.15"
seahash = "4.1"
smartstring = "1.0"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]