[package]
name = "pushgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
byte-slice-cast = "1.0"
fnv = "1.0"
log = "0.4"
nom = "7.1"
pushgp-macros = { path = "../pushgp-macros" }
rust_decimal = "1.15"
smartstring = "1.0"

[dependencies.prometheus]
version = "0.13"
features = ["process"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]